// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarUpload Render AvatarUpload component 1`] = `
<DocumentFragment>
  <label
    class="upload-avatar"
    for="upload_login"
  >
    <input
      id="upload_login"
      name="login"
      type="file"
    />
    <div
      class="MuiAvatar-root MuiAvatar-circle MuiAvatar-colorDefault"
    >
      LP
    </div>
  </label>
</DocumentFragment>
`;

exports[`AvatarUpload Render AvatarUpload component with image 1`] = `
<DocumentFragment>
  <label
    class="upload-avatar"
    for="upload_login"
  >
    <input
      id="upload_login"
      name="login"
      type="file"
    />
    <div
      class="MuiAvatar-root MuiAvatar-circle"
    >
      <img
        class="MuiAvatar-img"
        src="https://ya-praktikum.tech/api/v2/resources/2fe9d2f9-f3e6-4187-9087-06875845a9a3/cf582f84-7be4-4965-aab8-b97fb7c2afe6_logotip-gruppy-alisa.jpg"
      />
    </div>
  </label>
</DocumentFragment>
`;
